# rag_doc_mistral

./: CLAUDE.md  Dockerfile  README.md  chunker.py  chunks.csv  docker-compose.yml  embedder.py  eval_dataset_agents_with_gt_mistral_large_latest.json  eval_intermediate_top1_hybrid.json  eval_intermediate_top3_hybrid.json  eval_intermediate_top5_hybrid.json  evaluate.py  extract_all_md_files.py  main.py  pyproject.toml  rag.py  raw.json  server.py  vespa_utils.py
1st RAG results/: README.md  unfaithful_records_below_0.5.json
2nd RAG results/: eval_dataset.json  eval_intermediate_top1_hybrid.json  eval_intermediate_top3_hybrid.json  eval_intermediate_top5_hybrid.json
3rd RAG results (1st but with reasoning model as judge/: eval_intermediate_top3_hybrid.json
backend/: chunker.py  embedder.py  feed.py  rag.py  server.py  vespa_utils.py
chat_interface/: package.json  pnpm-lock.yaml
chat_interface/app/: page.tsx
evaluation/: eval_dataset.json  eval_dataset_hyde.json  eval_intermediate_top1_hybrid_hyde.json  eval_intermediate_top3_hybrid_hyde.json  eval_intermediate_top5_hybrid.json  eval_intermediate_top5_hybrid_hyde.json  evaluate.py
my-vespa-app/: services.xml
my-vespa-app/schemas/: doc.sd
